--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/duync2006/TOURDC-BE#readme",
   "dependencies": {
+    "app-root-path": "^3.0.0",
+    "cloudinary": "^1.41.3",
     "dotenv": "^16.3.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.3",
     "nodemon": "^3.0.3",
+    "path": "^0.12.7",
     "web3": "^4.4.0"
   }
 }
