--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/duync2006/TOURDC-BE#readme",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.0.3",
     "path": "^0.12.7",
     "web3": "^4.4.0"
