--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^5.9.1",
     "mongoose": "^8.1.0",
     "multer": "^1.4.3",
