--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/duync2006/TOURDC-BE#readme",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
     "dotenv": "^16.3.2",
