--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
+    "ethers": "5.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
