--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.3",
     "path": "^0.12.7",
     "web3": "^4.4.0"
